networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__all__ingress-apisix__egress__ports__ingress-apisix__nr57__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-apisix--all--ingress-apisix--egress--ports--ingress-apisix--nr57
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: ingress-apisix
